# docs

./: README.md
apache-kafka/: README.md
cara_install_iis_server/: README.md
crud_with_actix_web/: README.md
csr-vs-ssr/: README.md  (+2 more)
graphql-on-actix-web/: Cargo.toml  README.md
graphql-on-actix-web/graphql-on-actix-web/: Cargo.toml
graphql-on-actix-web/graphql-on-actix-web/src/: main.rs
graphql-on-actix-web/graphql-on-actix-web/src/connection/: db.rs
graphql-on-actix-web/graphql-on-actix-web/src/handlers/: order_handler.rs  user_handler.rs
graphql-on-actix-web/graphql-on-actix-web/src/models/: order_model.rs  user_model.rs
graphql-on-actix-web/graphql-on-actix-web/src/services/: order_service.rs  user_service.rs
graphql-on-actix-web/graphql-on-svelte/: package-lock.json  package.json
graphql-on-actix-web/graphql-on-svelte/src/components/: ModalCreateEditOrder.svelte  ModalCreateEditUser.svelte  Table.svelte
graphql-on-actix-web/graphql-on-svelte/src/lib/: index.js  order.js  query.js  user.js
graphql-on-actix-web/graphql-on-svelte/src/routes/: +layout.svelte  +page.svelte
graphql-on-actix-web/migrations/: 20250619054512_create_users_table.sql  20250619055025_create_users_table.sql
graphql-on-actix-web/src/: main.rs  main_backup.rs
graphql-on-actix-web/src/graphql/: datetime.rs  schema.rs
graphql-on-actix-web/src/handlers/: order_handler.rs  user_handler.rs
graphql-on-actix-web/src/models/: order_model.rs  user_model.rs
graphql-on-actix-web/src/schema/: schema.rs
graphql-on-actix-web/src/services/: order_service.rs  user_service.rs
(+44 files in other folders)
