[package]
name = "graphql-on-actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
async-graphql = { version = "7.0.17", features = ["dataloader"]}
async-graphql-actix-web = "7.0.17"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
